--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TräningsCentret</title>
-    <link rel="icon" href="../assets/pictures/old-logo.png" type="image/x-icon" />
+    <link rel="icon" href="assets/pictures/old-logo.png" type="image/x-icon" />
 </head>
 
 <body>
