--- a/index.html
+++ b/index.html
@@ -6,10 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TräningsCentret</title>
     <link rel="icon" href="assets/pictures/old-logo.png" type="image/x-icon" />
+    <link rel="stylesheet" href="pages/style.css">
 </head>
 
 <body>
-    Test
+    <nav>
+        <div class="nav-logo">
+            <img src="assets/pictures/old-logo.png" alt="">
+        </div>
+        <div class="nav-section">
+            <a href="">Hem</a>
+            <a href="">Om oss</a>
+            <a href="">Schema</a>
+            <a href="">Anmälan</a>
+            <a href="">Aktiviteter</a>
+            <a href="">Alla kan gympa</a>
+        </div>
+    </nav>
 </body>
 
 </html>
