drop down function test

--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
         <div class="nav-section">
             <a href="">Hem</a>
             <a href="">Om oss</a>
-            <a href="">Schema</a>
+            <div class="dropdown">
+                <a class="schema">Schema</a>
+                <div class="dropdown-content">
+                    <a href="#">Schema 1</a>
+                    <a href="#">Schema 2</a>
+                    <a href="#">Schema 3</a>
+                </div>
+            </div>
             <a href="">Anmälan</a>
             <a href="">Aktiviteter</a>
             <a href="">Alla kan gympa</a>
